tests/baselines/reference/propertyAccessStringIndexSignature.errors.txt
tests/cases/conformance/expressions/propertyAccess/propertyAccessStringIndexSignature.ts(10,7): error TS2339: Property 'nope' does not exist on type 'Empty'.


==== tests/cases/conformance/expressions/propertyAccess/propertyAccessStringIndexSignature.ts (1 errors) ====
    interface Flags { [name: string]: boolean };
    let flags: Flags;
    flags.b;
    flags.f;
    flags.isNotNecessarilyNeverFalse;
    flags['this is fine'];
    
    interface Empty { }
    let empty: Empty;
    empty.nope;
          ~~~~
!!! error TS2339: Property 'nope' does not exist on type 'Empty'.
    empty["that's ok"];
    